--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "27d2cdbf",
+   "id": "e6a12fdb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-09-14T22:26:56.271190Z",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "575837cc",
+   "id": "f53c263e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-09-14T22:26:56.799590Z",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f09e4039",
+   "id": "0c539835",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-09-14T22:32:36.328062Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e24889c6",
+   "id": "6b4e3dec",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-09-14T22:33:13.382571Z",
@@ -91,19 +91,44 @@
     "n_states = 12\n",
     "Hmean = obs.mean() / 2\n",
     "Hmean\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "33a3e1d1",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-14T22:34:03.777172Z",
+     "start_time": "2023-09-14T22:34:03.773075Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "398.19669705978583"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "max_cov = Hmean * n_states\n",
     "max_cov"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "ee93a506",
+   "execution_count": 22,
+   "id": "756ae7d7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T22:33:21.130672Z",
-     "start_time": "2023-09-14T22:33:21.125344Z"
+     "end_time": "2023-09-14T22:34:16.785808Z",
+     "start_time": "2023-09-14T22:34:16.781962Z"
     }
    },
    "outputs": [
@@ -113,7 +138,7 @@
        "1687224"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,12 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "39d11846",
+   "execution_count": 26,
+   "id": "d772191b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T22:33:23.369668Z",
-     "start_time": "2023-09-14T22:33:23.366592Z"
+     "end_time": "2023-09-14T22:54:02.030431Z",
+     "start_time": "2023-09-14T22:54:02.027707Z"
     }
    },
    "outputs": [],
@@ -140,17 +165,17 @@
     "#calculate std ev and set range of possible obs values\n",
     "\n",
     "stdev = np.sqrt(Hmean * 2)\n",
-    "observations = np.arange(0, max_obs+1)"
+    "observations = np.arange(0, min(max_obs+1 , (Hmean * 12) +1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "d5a61e58",
+   "execution_count": 27,
+   "id": "7b84d10d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T22:32:19.417129Z",
-     "start_time": "2023-09-14T22:32:19.412652Z"
+     "end_time": "2023-09-14T22:54:04.071767Z",
+     "start_time": "2023-09-14T22:54:04.066738Z"
     }
    },
    "outputs": [
@@ -160,7 +185,7 @@
        "(33.183058088315484, 8.146540135335428, 233)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2df6ff3",
+   "id": "01ddcb34",
    "metadata": {},
    "outputs": [],
    "source": []
