--- a/story.ipynb
+++ b/story.ipynb
@@ -166,9 +166,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e0da062b-ebe4-4b00-ac26-ae99ef47d5e8",
+   "metadata": {},
+   "source": [
+    "### We can see that the rolling average can be used to \"downsample\" the data to reduce variability "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "594c63bf-d3a2-42dc-b9c8-9f0dd18a0198",
+   "id": "5c665ae5-a0cd-42d8-bad3-76a5ebd744cd",
    "metadata": {},
    "outputs": [],
    "source": []
